[workspace]
resolver = "2"
members = [
    "data",
    "linalg",
    "core",
    "pulse",
    "pulse-opl",
    "hir",
    "nnef",
    "nnef/cli",
    "nnef/nnef-resources",
    "tensorflow",
    "tflite",
    "onnx-opl",
    "onnx",
    "libcli",
    "cli",
    "gpu",
    "metal",
    "extra",
    "transformers",

    "metal",

    "api",
    "api/rs",
    "api/ffi",
    "api/proxy",
    "api/proxy/sys",

    "examples/face_detection_yolov8onnx_example",
    "examples/face_similarity_arcface_onnx",
    "examples/tensorflow-mobilenet-v2",
    "examples/tflite-mobilenet-v3",
    "examples/keras-tract-tf2",
    "examples/nnef-dump-mobilenet-v2",
    "examples/nnef-mobilenet-v2",
    "examples/onnx-mobilenet-v2",
    "examples/pytorch-albert-v2",
    "examples/pytorch-resnet",

    "harness/core-proptest-pulse",
    "harness/lstm-proptest-onnx-vs-tf",
    "harness/nnef-inceptionv3",
    "harness/tf-inceptionv3",
    "harness/tf-mobilenet-v2",
    "harness/tf-moz-deepspeech",
    "harness/tfl-mobilenet-v2-q",

    "test-rt/infra",
    "test-rt/suite-unit",
    "test-rt/suite-onnx",
    "test-rt/test-f16",
    "test-rt/test-blas",
    "test-rt/test-metal",
    "test-rt/test-unit-core",
    "test-rt/test-onnx-core",
    "test-rt/test-nnef-cycle",
    "test-rt/test-tflite"
]

# same, without metal, test-metal and test-tflite which are probelematic on specific targets
default-members = [
    "data",
    "linalg",
    "core",
    "pulse",
    "pulse-opl",
    "hir",
    "nnef",
    "nnef/cli",
    "nnef/nnef-resources",
    "tensorflow",
    "tflite",
    "onnx-opl",
    "onnx",
    "libcli",
    "cli",
    "extra",
    "transformers",

    "api",
    "api/rs",
    "api/ffi",

    "examples/face_detection_yolov8onnx_example",
    "examples/face_similarity_arcface_onnx",
    "examples/tensorflow-mobilenet-v2",
    "examples/tflite-mobilenet-v3",
    "examples/keras-tract-tf2",
    "examples/nnef-dump-mobilenet-v2",
    "examples/nnef-mobilenet-v2",
    "examples/onnx-mobilenet-v2",
    "examples/pytorch-albert-v2",
    "examples/pytorch-resnet",

    "harness/core-proptest-pulse",
    "harness/lstm-proptest-onnx-vs-tf",
    "harness/nnef-inceptionv3",
    "harness/tf-inceptionv3",
    "harness/tf-mobilenet-v2",
    "harness/tf-moz-deepspeech",
    "harness/tfl-mobilenet-v2-q",

    "test-rt/infra",
    "test-rt/suite-unit",
    "test-rt/suite-onnx",
    "test-rt/test-f16",
    "test-rt/test-blas",
    "test-rt/test-unit-core",
    "test-rt/test-onnx-core",
    "test-rt/test-nnef-cycle",
]

[workspace.dependencies]
accelerate-src = "0.3"
adapter = "=0.3.0"
ansi_term = "0.12.1"
anstyle = "1.0.2"
anstyle-parse = "0.2.1"
anstyle-query = "1.0.0"
anyhow = "1.0.43"
anymap3 = "1.0"
approx = "0.5"
bit-set= "0.5.2"
blis-src = { version = "0.2", features = ["static", "pthreads"] }
block = "0.1.6"
boow = "0.1.3"
box_drawing = "0.1.2"
byteorder = "1.4.3"
bytes = "1.0.1"
cblas = "0.4"
cc = "1.0.69"
clap = { version = "~3.1", features = [ "cargo" ] }
colorous = "1.0.5"
core_affinity = "0.8.0"
criterion = "0.5.1"
derive-new = "0.5.9"
dinghy-test = "0.6"
downcast-rs = "1.2.0"
dyn-clone = "1.0.4"
dyn-hash = "0.2"
env_logger = "0.10"
flatbuffers = "23.1.21"
flate2 = "1.0.20"
foreign-types = "0.5"
fs-err = "2"
fs2 = "0.4.3"
getrandom = "0.2"
half = { version="=2.4.1", features = [ "std", "num-traits" ] }
home = "=0.5.9"
icu_collections = "=1.5.1"
icu_normalizer = "=1.5.0"
icu_normalizer_data = "=1.5.1"
icu_properties = "=1.5.1"
icu_properties_data = "=1.5.1"
idna_adapter = "=1.2.0"
image = "0.24.1"
itertools = "0.12.1"
lazy_static = "1.5.0"
libc = "=0.2.164"
libm = "=0.2.11"
liquid = "=0.26.8"
liquid-core = "=0.26.8"
liquid-derive = "=0.26.8"
litemap = "=0.7.4"
log = "0.4.14"
maplit = "1.0.2"
memmap2 = "0.9"
metal = { version = "0.30.0" }
ndarray = "0.16"
ndarray-npy = { version = "0.9.1", features = [ "compressed_npz" ] }
nom = "7.0.0"
nu-ansi-term = "0.46"
num-complex = "0.4.0"
num-integer = "0.1.44"
num-traits = "0.2.14"
num_cpus = "1"
openblas-src = { version = "0.10", features = ["static"] }
paste = "1.0.5"
potential_utf = "=0.1.0"
proptest = "1.0.0"
prost = "0.11.0"
prost-types = "0.11.0"
py_literal = "0.4.0"
rand = { version = "0.8.4", features = ["small_rng"] }
rand_distr = "0.4"
rayon = "1.10"
readings-probe = "0.1.7"
regex = "1.5.4"
reqwest = { version = "0.12", features = [ "blocking", "rustls-tls" ], default-features = false }
rustfft = { version = "6.1", features = [ "neon" ] }
rustix = "0.38.4"
rustls = "0.20.4"
scan_fmt = "0.2.6"
serde = { version = "1.0.127", features = [ "derive" ] }
serde_json = "1.0"
smallvec = "1.6.1"
string-interner = "0.15"
structopt = { version = "0.3", default-features = false }
tar = "0.4.37"
tempfile = "3.8"
tensorflow = "0.17.0"
tflitec = { git = "https://github.com/kali/tflitec-rs.git", rev="9ceb838" }
time = "0.3.23"
time-macros = "0.2.10"
tinystr = "=0.8.0"
tokenizers = "0.19"
unicode-normalization = "0.1.19"
walkdir = "2.3.2"
writeable = "=0.6.0"
zerofrom = "=0.1.5"
zerotrie = "=0.2.1"
tract-api = { version = "0.21.13-pre", path = 'api' }
tract-core = { version = "0.21.13-pre", path = 'core' }
tract-data = { version = "0.21.13-pre", path = 'data' }
tract-extra = { version = "0.21.13-pre", path = 'extra' }
tract-gpu = { version = "0.21.13-pre", path = 'gpu' }
tract-hir = { version = "0.21.13-pre", path = 'hir' }
tract-libcli = { version = "0.21.13-pre", path = 'libcli' }
tract-linalg = { version = "0.21.13-pre", path = 'linalg' }
tract-metal = { version = "0.21.13-pre", path = 'metal' }
tract-nnef-resources = { version = "0.21.13-pre", path = 'nnef/nnef-resources' }
tract-nnef = { version = "0.21.13-pre", path = 'nnef' }
tract-onnx-opl = { version = "0.21.13-pre", path = 'onnx-opl' }
tract-onnx = { version = "0.21.13-pre", path = 'onnx' }
tract-pulse-opl = { version = "0.21.13-pre", path = 'pulse-opl' }
tract-pulse = { version = "0.21.13-pre", path = 'pulse' }
tract-tensorflow = { version = "0.21.13-pre", path = 'tensorflow' }
tract-tflite = { version = "0.21.13-pre", path = 'tflite' }
tract-transformers = { version = "0.21.13-pre", path = 'transformers' }
tract-rs = { version = "0.21.13-pre", path = 'api/rs' }
tract-proxy = { version = "0.21.13-pre", path = 'api/proxy' }
tract-proxy-sys = { version = "0.21.13-pre", path = 'api/proxy/sys' }
tract-ffi = { version = "0.21.13-pre" }
tract = { version = "0.21.13-pre" }


[profile.opt-no-lto]
inherits="release"
lto=false

[profile.release]
# debug = true
lto = true

[profile.bench]
debug = true

[profile.dev.package."*"]
opt-level = 2

[profile.dev.package.darling_macro]
opt-level = 0 # work around never ending build on wondows

[profile.dev.build-override]
debug = false
# strip = "debuginfo" does not work on android and ios
incremental = false
