[package]
name = "tract-api"
version = "0.20.7-pre"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/sonos/tract"
keywords = [ "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.65"
include = [ "Cargo.toml", "src/**/*.rs", "LICENSE*", "tract.h" ]

[dependencies]
anyhow.workspace = true
boow.workspace = true
flate2.workspace = true
half.workspace = true
ndarray.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile = "*"
serde_json = "*"
