[package]
name = "tract-api"
version = "0.21.13"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/sonos/tract"
keywords = [ "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.75"
include = [ "Cargo.toml", "src/**/*.rs", "LICENSE*", "tract.h" ]

[dependencies]
anyhow.workspace = true
boow.workspace = true
flate2.workspace = true
half.workspace = true
ndarray.workspace = true

[features]
complex = []

[dev-dependencies]
lazy_static = "1.4.0"
reqwest.workspace = true
tempfile.workspace = true
serde_json.workspace = true
