[package]
name = "tract"
version = "0.21.13"
authors = [ "Romain Liautaud <romain.liautaud@snips.ai>", "Mathieu Poumeyrol <kali@zoy.org>"]
license = "MIT OR Apache-2.0"
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
include = [ "Cargo.toml", "src/**/*.rs", "LICENSE*" ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
box_drawing.workspace = true
clap.workspace = true
criterion.workspace = true
colorous.workspace = true
env_logger.workspace = true
flate2.workspace = true
fs-err.workspace = true
icu_normalizer.workspace = true
icu_normalizer_data.workspace = true
icu_properties.workspace = true
icu_properties_data.workspace = true
idna_adapter.workspace = true
lazy_static.workspace = true
litemap.workspace = true
log.workspace = true
ndarray-npy.workspace = true
nu-ansi-term.workspace = true
num_cpus.workspace = true
py_literal.workspace = true
readings-probe.workspace = true
regex.workspace = true
reqwest.workspace = true
rustls.workspace = true
scan_fmt.workspace = true
serde.workspace = true
serde_json.workspace = true
tract-linalg.workspace = true
tract-core.workspace = true
tract-hir.workspace = true
tract-nnef.workspace = true
tract-libcli.workspace = true
tract-extra = { workspace = true, optional = true }
tract-pulse = { workspace = true, optional = true }
tract-pulse-opl = { workspace = true, optional = true }
tract-onnx = { workspace = true, optional = true }
tract-tensorflow = { workspace = true, optional = true }
tract-tflite = { workspace = true, optional = true }
tract-transformers = { workspace = true, optional = true }
zerofrom.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
tract-metal.workspace = true
tract-gpu.workspace = true


[features]
default = ["onnx", "tf", "pulse", "pulse-opl", "tflite", "transformers", "extra"]
apple-amx-ios = [ "tract-linalg/apple-amx-ios" ]
onnx = [ "tract-onnx", "tract-libcli/hir", "tract-libcli/onnx" ]
extra = [ "tract-extra" ]
pulse-opl = [ "tract-pulse-opl" ]
pulse = [ "tract-pulse", "tract-pulse-opl" ]
tf = [ "tract-tensorflow", "tract-libcli/hir" ]
tflite = [ "tract-tflite" ]
transformers = [ "tract-transformers" ]
conform = [ "tract-tensorflow/conform"  ]
multithread-mm = [ "tract-linalg/multithread-mm" ]
