[package]
name = "tract-core"
version = "0.21.2-pre"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.75"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
bit-set.workspace = true
cblas = { version = "0.4" }
# blis-src = { version = "0.2", features = ["static", "pthreads"] }
openblas-src = { version = "0.10", features = ["static"] }
derive-new.workspace = true
downcast-rs.workspace = true
dyn-clone.workspace = true
lazy_static.workspace = true
log.workspace = true
maplit.workspace = true
ndarray.workspace = true
num-integer.workspace = true
num-traits.workspace = true
num-complex.workspace = true
paste.workspace = true
rustfft.workspace = true
smallvec.workspace = true
tract-linalg = { version = "=0.21.2-pre", path = "../linalg" }
tract-data = { version = "=0.21.2-pre", path = "../data" }

[features]
default = [ ]
complex = [ "tract-data/complex", "tract-linalg/complex" ]
paranoid_assertions = []

[dev-dependencies]
criterion.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
proptest.workspace = true
approx.workspace = true
