[package]
name = "tract-core"
version = "0.21.5"
license = "MIT OR Apache-2.0"
authors = ["Mathieu Poumeyrol <kali@zoy.org>"]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks" ]
categories = [ "science" ]
autobenches = false
edition = "2021"
rust-version = "1.75"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
accelerate-src = { workspace = true, optional = true }
anyhow.workspace = true
bit-set.workspace = true
blis-src = { version = "0.2", features = ["static", "pthreads"], optional = true }
cblas = { version = "0.4", optional = true }
derive-new.workspace = true
downcast-rs.workspace = true
dyn-clone.workspace = true
lazy_static.workspace = true
log.workspace = true
maplit.workspace = true
ndarray.workspace = true
num-integer.workspace = true
num-traits.workspace = true
num-complex.workspace = true
openblas-src = { workspace=true, optional = true }
paste.workspace = true
rustfft.workspace = true
smallvec.workspace = true
tract-linalg = { version = "=0.21.5", path = "../linalg" }
tract-data = { version = "=0.21.5", path = "../data" }

[features]
default = [ ]
complex = [ "tract-data/complex", "tract-linalg/complex" ]
blas = [ "cblas" ]
accelerate = [ "blas", "accelerate-src" ]
blis = [ "blas", "blis-src" ]
openblas = [ "blas", "openblas-src" ]
paranoid_assertions = []

[dev-dependencies]
criterion.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
proptest.workspace = true
approx.workspace = true
