[package]
name = "tract-cuda"
version = "0.23.0-dev.5"
license = "MIT OR Apache-2.0"
authors = [
	"Louis Chouraki <louis.chouraki@sonos.com>",
	"Mathieu Poumeyrol <kali@zoy.org>",
]
description = "Tiny, no-nonsense, self contained, TensorFlow and ONNX inference"
repository = "https://github.com/snipsco/tract"
keywords = [ "TensorFlow", "NeuralNetworks", "CUDA" ]
categories = [ "science" ]
autobenches = false
edition = "2024"
rust-version.workspace = true

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
anyhow.workspace = true
derive-new.workspace = true
dyn-eq.workspace = true
dirs.workspace = true
downcast-rs.workspace = true
minijinja.workspace = true
num-traits.workspace = true
tract-core.workspace = true
tract-pulse-opl.workspace = true
tract-transformers.workspace = true
tract-gpu.workspace = true
log.workspace = true
cudarc.workspace = true
inventory.workspace = true
libloading.workspace = true


[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rand.workspace = true

[features]
cuda-13000 = ["cudarc/cuda-13000"]
default = ["cuda-13000"]

[[bench]]
name = "cuda_flash"
harness = false
